# worm-ai-light

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: custom-installer.nsi
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/wix/: locale-en-US.wxl  locale-zh-CN.wxl
