[package]
name = "worm-ai-light"
version = "0.1.0"
edition = "2021"
description = "AI牛马灯 - 跨平台桌面状态指示灯"

[lib]
name = "worm_ai_light_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "7"
notify-debouncer-mini = "0.4"

